--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -70,6 +70,7 @@ jobs:
     runs-on: ubuntu-latest 
     needs: build 
     env:
+      ANSIBLE_HOST_KEY_CHECKING: "False"
       INVENTORY_FILE: inventory.ini
       PLAYBOOK_FILE: infra/Ansible-playbook/deploy-war.yml
       TOMCAT_USER: ec2-user
@@ -117,4 +118,6 @@ jobs:
     # 6. Run Ansible Playbook to deploy WAR
     - name: Deploy WAR to Tomcat
       run: |
-        ansible-playbook -i $INVENTORY_FILE $PLAYBOOK_FILE -e "war_file=./artifacts/votingapp.war"
+        ansible-playbook -i $INVENTORY_FILE $PLAYBOOK_FILE \
+          --private-key=~/ubuntu-access-key.pem \
+          -e "war_file=./artifacts/votingapp.war"
