--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,7 +24,26 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    
+    # 2. Setup Terraform
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_version: 1.5.0
+
+    # 3. Initialize and refresh Terraform to update inventory
+    - name: Terraform Init
+      working-directory: ./infra/Terraform
+      env:
+        TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: terraform init
+
+    - name: Terraform Refresh (updates state and inventory.ini without changing infrastructure)
+      working-directory: ./infra/Terraform
+      env:
+        TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: terraform refresh
 
     # 4. Capture Terraform outputs
     - name: Get DB Outputs
@@ -35,7 +54,13 @@ jobs:
         echo "db_username=${{ secrets.DB_USERNAME }}" >> $GITHUB_OUTPUT
         echo "db_password=${{ secrets.DB_PASSWORD }}" >> $GITHUB_OUTPUT
 
-    # 5. Set up Java
+    # 5. Verify inventory was updated
+    - name: Verify inventory.ini updated
+      run: |
+        echo "Current inventory.ini:"
+        cat inventory.ini
+
+    # 6. Set up Java
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
